--- a/Image_Changer/index.html
+++ b/Image_Changer/index.html
@@ -9,24 +9,24 @@
     <div class="box_container">
         <div class="box1">
             <div class="image_container">
-                <img src="images/photo_1.jpeg" class="photo_container">
+                <img src="images/photo_1.webp" class="photo_container">
             </div>
             <button id="img_button1">
                 Click Me
             </button>
             <div>Click the button to change the image in <b>order</b></div>
-            <div>current img - <span class="imgSrc">photo_1.jpeg</span></div>
+            <div>current img - <span class="imgSrc">photo_1</span></div>
         </div>
         
         <div class="box2">
             <div class="image_container">
-                <img src="images/photo_1.jpeg" class="photo_container">
+                <img src="images/photo_1.webp" class="photo_container">
             </div>
             <button id="img_button2">
                 Click Me
             </button>
             <div>Click the button to change the image in <b>random</b></div>
-            <div>current img - <span class="imgSrc">photo_1.jpeg</span></div>
+            <div>current img - <span class="imgSrc">photo_1</span></div>
         </div>
     </div>
     <div class="text_content">
