--- a/Image_Changer/index.html
+++ b/Image_Changer/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+    <div class="text_content" style="color:rgb(85, 77, 51); text-align: center;">
+        Before clicking, just wait a little second. 
+        Cause it needs loading time to see the image changing.
+        And I have not learned yet how to make loading faster.
+    </div>
     <div class="box_container">
         <div class="box1">
             <div class="image_container">
